# linear-enzymes

./: Arena.cpp  Arena.hpp  Atom.cpp  Atom.hpp  BUILD.txt  Bond.hpp  CMakeLists.txt  Neighborhood.hpp  README.md  Reaction.cpp  Reaction.hpp  Slot.cpp  Slot.hpp  app.cpp  app.hpp  build.cmd  frame.cpp  frame.hpp  index.html  index.js  index.wasm
MPEG_physics/: index.wasm  mpeg_physics_changes.patch
compaction_demo/: index.js  index.wasm
enzymes_demo/: index.html  index.js  index.wasm
src/: Arena.cpp  Arena.hpp  Arena_SDL.cpp  Arena_SDL.hpp  Atom.cpp  Atom.hpp  Bond.hpp  Neighborhood.hpp  Reaction.cpp  Reaction.hpp  Slot.cpp  Slot.hpp  base_conversions.cpp  main.cpp  utils.cpp  utils.hpp
